[project]
name = "polaris-asap-admet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "chemprop>=2.1.1",
    "ipython>=8.32.0",
    "isort>=6.0.1",
    "polaris-lib>=0.11.9",
    "polars>=1.23.0",
    "rdkit>=2024.9.5",
    "ruff>=0.9.7",
    "spyrmsd>=0.8.0",
    "tensorboard>=2.19.0",
    "typeguard>=4.4.2",
]
